--- a/YesodSimple.cabal
+++ b/YesodSimple.cabal
@@ -32,7 +32,7 @@ library
     extensions: TemplateHaskell
                 QuasiQuotes
                 OverloadedStrings
-                --NoImplicitPrelude
+                NoImplicitPrelude
                 CPP
                 MultiParamTypeClasses
                 TypeFamilies
@@ -101,7 +101,7 @@ test-suite test
     extensions: TemplateHaskell
                 QuasiQuotes
                 OverloadedStrings
-                --NoImplicitPrelude
+                NoImplicitPrelude
                 CPP
                 MultiParamTypeClasses
                 TypeFamilies
