--- a/YesodSimple.cabal
+++ b/YesodSimple.cabal
@@ -47,6 +47,7 @@ library
                 RecordWildCards
 
     build-depends: base                          >= 4          && < 5
+                 , blaze-html
                  , yesod                         >= 1.4.1      && < 1.5
                  , yesod-core                    >= 1.4.6      && < 1.5
                  , yesod-auth                    >= 1.4.0      && < 1.5
@@ -115,6 +116,7 @@ test-suite test
                 TupleSections
 
     build-depends: base
+                 , blaze-html
                  , YesodSimple
                  , yesod-test >= 1.4.3 && < 1.5
                  , yesod-core
