--- a/YesodSimple.cabal
+++ b/YesodSimple.cabal
@@ -77,6 +77,7 @@ library
                  , fast-logger                   >= 2.2        && < 2.4
                  , wai-logger                    >= 2.2        && < 2.3
                  , file-embed
+                 , blaze-markup
                  , conduit-extra
                  , resourcet
                  , safe
